--- a/gamba/index.html
+++ b/gamba/index.html
@@ -9,7 +9,7 @@
 		rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="./css/style.css" type="text/css">
-	<link rel="shortcut icon" href="./images/G.png" type="image/x-icon">
+	<link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 </head>
 
 <body class="container">
