fix nav product

--- a/gamba/index.html
+++ b/gamba/index.html
@@ -118,7 +118,7 @@
 				<li class="products__nav-item"><a href="#products" class="products__nav-link">Vegetables</a>
 				</li>
 				<li class="products__nav-item"><a href="#products" class="products__nav-link">Juices</a></li>
-				<li class="products__nav-item"><a href="#products" class="products__nav-link">Dried Products</a>
+				<li class="products__nav-item"><a href="#products" class="products__nav-link">Drieds</a>
 				</li>
 			</ul>
 		</nav>
