--- a/vora-app/index.html
+++ b/vora-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Vora - App Landing Page</title>
+	<title>Vora | Best Mobile App Template For Your Business</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- owl carousel css -->
@@ -20,6 +20,8 @@
 
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
+	<!-- favicon -->
+	<link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
 
 </head>
 
