change media queries

--- a/gamba/index.html
+++ b/gamba/index.html
@@ -381,7 +381,7 @@
                 <div class="blog__description">
                     <h1 class="blog__title heading-2 heading-2--med">50 Foods That Are Super Healthy</h1>
                     <h4 class="blog__time body-text body-text--light">12.03.2019</h4>
-                    <p class="blog__text-preview">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo rerum cupiditate quaerat impedit veritatis molestiae.</p>
+                    <p class="blog__text-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, possimus quasi repellat dolorum porro provident rerum.</p>
                     <a href="#blog" class="blog__btn btn-text">Read more &#8594;</a>
                 </div>
             </section>
@@ -393,7 +393,7 @@
                 <div class="blog__description">
                     <h1 class="blog__title heading-2 heading-2--med">Eat Like An Athlete</h1>
                     <h4 class="blog__time body-text body-text--light">23.03.2020</h4>
-                    <p class="blog__text-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis voluptas quidem corporis maxime reprehenderit blanditiis?</p>
+                    <p class="blog__text-preview">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, sequi?</p>
                     <a href="#blog" class="blog__btn btn-text">Read more &#8594;</a>
                 </div>
             </section>
@@ -405,7 +405,7 @@
                 <div class="blog__description">
                     <h1 class="blog__title heading-2 heading-2--med">5 Healthy Fruit Smoothie Recipes</h1>
                     <h4 class="blog__time body-text body-text--light">21.01.2020</h4>
-                    <p class="blog__text-preview">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore placeat perspiciatis consectetur dolorum nostrum esse!</p>
+                    <p class="blog__text-preview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, expedita.</p>
                     <a href="#blog" class="blog__btn btn-text">Read more &#8594;</a>
                 </div>
             </section>
@@ -417,7 +417,7 @@
                 <div class="blog__description">
                     <h1 class="blog__title heading-2 heading-2--med">Different Ways To Use Your Fruit & Veg</h1>
                     <h4 class="blog__time body-text body-text--light">02.12.2020</h4>
-                    <p class="blog__text-preview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, repellat necessitatibus sunt facilis molestiae deleniti?</p>
+                    <p class="blog__text-preview">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, excepturi.</p>
                     <a href="#blog" class="blog__btn btn-text">Read more &#8594;</a>
                 </div>
             </section>
